secrets.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-wallet
