deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: {ENVIRONMENT_IDENTIFIER}
  name: ows-core-deployment
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: ows-core
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ows-core
    spec:
      containers:
        - name: ows-core
          image: {DOCKER_IMAGE_PLACEHOLDER}
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 2
            httpGet:
              port: 8080
              path: /api/actuator/health
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: {ENVIRONMENT_IDENTIFIER}
  name: ows-core-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ows-core
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: {ENVIRONMENT_IDENTIFIER}
  name: ows-core-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: {SSL_CERT_ARN}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: "/api/actuator/health"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: ows-core-service
                port:
                  name: http
